# project-Group20

./: .buildinfo  .gitignore  Makefile  README.html  README.md  _config.yml  _toc.yml  code.ipynb  code_notebook.html  code_notebook.ipynb  conf.py  contribution_statement.html  contribution_statement.md  environment.yml  genindex.html  main.ipynb  objects.inv  project-description.html  requirements.txt  search.html  searchindex.js  setup.cfg
.github/workflows/: book.yml
.pytest_cache/: README.html
_build/.doctrees/: environment.pickle  project-description.doctree
_build/.doctrees/mybook/: intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
_build/html/: .buildinfo  README.html  code_notebook.html  genindex.html  index.html  objects.inv  project-description.html  search.html  searchindex.js
_build/html/.doctrees/: README.doctree  code_notebook.doctree  environment.pickle
_build/html/.doctrees/mybook/: notebooks.doctree
_build/html/mybook/: intro.html  markdown-notebooks.html  markdown.html  notebooks.html
_build/jupyter_execute/: code_notebook.ipynb
_build/jupyter_execute/mybook/: markdown-notebooks.ipynb  notebooks.ipynb
_sources/: README.md  code_notebook.ipynb  contribution_statement.md
figures/: untitled.txt
tools/: utils.py
tools/tests/: __init__.py  test_utils.py
