# Declarative configuration for setup.py

# For more details on this format, see the official docs here:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# And a useful annotated template can be found here:
# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c

[metadata]
name             = housing
version          = attr: tools.__version__
author           = Stat159 Spring 2021 Group 20, Jeffrey Cheng, Quanyi Li, Gabriel Mendez, Samantha Wang
author_email     = jeffreycheng@berkeley.edu
description      = Reproducible research package of the Kaggle housing dataset EDA
keywords         = EDA
classifiers      =
	Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
# These should be consistent with what is specified in the environment.yml
python_requires  = >= 3.8,
install_requires =
	matplotlib >= 3.5
	ipython >= 8.2
	ipykernel >= 5.5
	statsmodels >= 0.14
	scikit-learn >= 1.2
	jupyter-book
	pandas
	seaborn